objects/EDA_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for EDA to Account to enable standard field options (for partner portal).</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EDA_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_on_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add-on Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_on_Type__c</fullName>
        <label>Add-on Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>EDA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDA3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <label>Amendment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Letter__c</fullName>
        <label>Attachment Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <description>Contract Booked Date</description>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Comments__c</fullName>
        <label>CRM Comments</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ca__c</fullName>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_End_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_CurrentSales__c</fullName>
        <label>Current Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Internal__c</fullName>
        <label>Contract_Contact_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Primaryemail__c</fullName>
        <label>Primary FOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Secondary__c</fullName>
        <label>Secondary FOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Tech__c</fullName>
        <label>Tech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Flag__c</fullName>
        <label>Contract Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Max Lic Term Days</label>
        <picklist>
            <picklistValues>
                <fullName>90</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Balance_USD__c</fullName>
        <label>Current Balance (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Execution_Date__c</fullName>
        <label>Customer Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EDA_Card_Type__c</fullName>
        <label>Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Prem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDA_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Parent Account set by trigger.</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EDA_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EDA__c</fullName>
        <label>eDAOnTap Comments</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_at__c</fullName>
        <description>Extract the SAPID of the Account</description>
        <formula>TEXT( ROUND( VALUE( Account__r.SAP_Customer_Id__c ) ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstallAt ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Lic_Term_Date__c</fullName>
        <label>Max Lic Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Term_Date__c</fullName>
        <label>Max Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Price_Books__c</fullName>
        <label>Multiple_Price_Books</label>
        <picklist>
            <picklistValues>
                <fullName>Currently Published</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>EDA_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Balance_USD__c</fullName>
        <label>Original Balance (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Balance__c</fullName>
        <label>Original Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <formula>Account__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Parent Account</description>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Number__c</fullName>
        <label>Parent Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SAP_Number__c</fullName>
        <label>Parent SAP Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBook_Detail__c</fullName>
        <description>Multiple Pricebooks delimited by comma, and with each pricebook being a concatenation of &lt;PriceBook_Type&gt; - &lt;PriceBook_Date&gt;.</description>
        <label>PriceBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Type__c</fullName>
        <label>Price Book Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Status__c</fullName>
        <label>SAP Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <label>Site City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <label>Site Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zipcode__c</fullName>
        <label>Site Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTIVE-SUSPENDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-CLOSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-SUSPENDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-TERMINATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE-CANCELLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE-CLOSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE-TERMINATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCV_TC__c</fullName>
        <label>TCV(TC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TC_Category__c</fullName>
        <label>T&amp;C Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User WAN</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ca__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Card_Start_Date__c</columns>
        <columns>Card_End_Date__c</columns>
        <columns>Max_Term_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Original_Balance_USD__c</columns>
        <columns>Current_Balance_USD__c</columns>
        <columns>Agreement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ca__c</field>
            <operation>equals</operation>
            <value>512492</value>
        </filters>
        <label>Access DD Test View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Expiring_in_next_90_days</fullName>
        <columns>Card_End_Date__c</columns>
        <columns>SAP_Order_Number__c</columns>
        <columns>NAME</columns>
        <columns>EDA_Card_Type__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Current_Balance_USD__c</columns>
        <columns>Status__c</columns>
        <columns>Price_Book__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>startsWith</operation>
            <value>ACTIVE</value>
        </filters>
        <label>Expiring in next 90 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Modified_in_last_30_days</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>SAP_Order_Number__c</columns>
        <columns>NAME</columns>
        <columns>EDA_Card_Type__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Card_End_Date__c</columns>
        <columns>Current_Balance_USD__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Modified in last 30 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Modified_in_last_7_days</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>SAP_Order_Number__c</columns>
        <columns>NAME</columns>
        <columns>EDA_Card_Type__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Card_End_Date__c</columns>
        <columns>Current_Balance_USD__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Modified in last 7 days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Active_EDA_Cards</fullName>
        <columns>NAME</columns>
        <columns>EDA_Card_Type__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Card_End_Date__c</columns>
        <columns>Current_Balance_USD__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>startsWith</operation>
            <value>ACTIVE</value>
        </filters>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>equals</operation>
            <value>eDA</value>
        </filters>
        <label>My Active EDA Cards</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Card #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>